See if this fixes backgorund image on mobile

--- a/cssfiles/index.css
+++ b/cssfiles/index.css
@@ -56,12 +56,12 @@ html,
 }
 
 .homebg {
-  background-image: url("../assets/teachingimg1.jpg");
+  background-image: url("../assets/Teachingimg1.jpg");
   background-size: cover;
-  background-position: center center;
+  background-position: top center;
   background-repeat: no-repeat;
   background-blend-mode: multiply;
-  background-color: rgb(166, 162, 162);
+  background-color: rgb(131, 129, 129);
 }
 
 .learnaibg {
